--- a/views/index.pug
+++ b/views/index.pug
@@ -2,5 +2,11 @@ extends layout
 
 block content
   div(style="padding: 50px")
-  h1= "Welcome "
-    span #{session.email}
+  h1= "Blog System"
+  for article in blogs
+    div
+      div(style="float: left;margin-top: 20px;")=article.Email
+      div(style="float: left;margin: 20px 0 20px 20%;")=article.CreateDate
+      div(style="clear: both;")=article.Article
+      a(href="/users/message/" + article.id, style="float: right;margin-top: 90px;") Leave a message
+      hr(style="margin-top: 110px;")
