--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div(style="padding: 50px")
-  h1= "Blog System"
+  h1= "All Articles"
   for article in blogs
     div
       div(style="float: left;margin-top: 20px;")=article.Email
