--- a/views/users/add_article.pug
+++ b/views/users/add_article.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
   h1 Add Article
   form(name="add_article", action="/apis/add", method="post")
-    div
+    #content
       textarea(name="content", cols="100", rows="25")
-    div
+    #button-group
       input(type="submit", value="Submit")
