--- a/views/users/forget_password.pug
+++ b/views/users/forget_password.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  div(id="auth-block")
+  #auth-block
     div
     h1 Forget Password
     form(name="forget_password", action="/apis/forget_password", method="post")
